fix: fixed overflow scroll bar

--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -11,7 +11,7 @@
 
     min-width: 320px;
     max-height: 90vmax;
-    overflow-y: scroll;
+    overflow-y: hidden;
     z-index: 1;
 }
 
